Fix inconsistent ink drop base colors for the toolbar buttons

The reload button, the browser actions buttons, and the menu
button used to have a slightly different ink drop base color
than those of the other toolbar buttons such as the back,
forward, and home buttons.

This CL unifies the base ink drop colors for all these buttons.

BUG=845442

Change-Id: I46137e3a5a78a0cc1cb6772989ac6cd03bd2ce1f
Reviewed-on: https://chromium-review.googlesource.com/1069452
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561178}
Former-commit-id: f448fd4ed19a01120a82166ba3f59190ceb9635a