chrome/browser/ui/views/frame/app_menu_button.cc
@@ -8,6 +8,7 @@
 
 #include "chrome/browser/ui/toolbar/app_menu_model.h"
 #include "chrome/browser/ui/views/toolbar/app_menu.h"
+#include "chrome/browser/ui/views/toolbar/toolbar_ink_drop_util.h"
 #include "ui/views/controls/menu/menu_listener.h"
 #include "ui/views/style/platform_style.h"
 
@@ -17,6 +18,10 @@ AppMenuButton::AppMenuButton(views::MenuButtonListener* menu_button_listener)
 }
 
 AppMenuButton::~AppMenuButton() {}
+
+SkColor AppMenuButton::GetInkDropBaseColor() const {
+  return GetToolbarInkDropBaseColor(this);
+}
 
 void AppMenuButton::CloseMenu() {
   if (menu_)
